[gd_scene format=3 uid="uid://brktccwmkngwh"]

[ext_resource type="Script" uid="uid://ccmk5njwy16d3" path="res://actors/_common/field_party_base/field_party_member.gd" id="1_6iyvr"]
[ext_resource type="Texture2D" uid="uid://cyqydh0eq7fpk" path="res://_assets/character/party/healer/healer_sprite_sheet.png" id="2_qvlbb"]
[ext_resource type="Script" uid="uid://d3x6ygbikx1wm" path="res://actors/field_state_machine/base_state_machine_scripts/state_machine.gd" id="3_ogjyn"]
[ext_resource type="Script" uid="uid://d5o2fabdwjw3" path="res://actors/field_state_machine/party_states/party_idle.gd" id="4_76gxx"]
[ext_resource type="Script" uid="uid://ddqaa4rhgkdvb" path="res://actors/field_state_machine/party_states/party_walk.gd" id="5_jb775"]
[ext_resource type="Script" uid="uid://8ociqfwtb2co" path="res://actors/field_state_machine/party_states/party_follow.gd" id="6_7w712"]
[ext_resource type="FontVariation" uid="uid://b5llu2gvm3oh1" path="res://_assets/fonts/pixel_loot_dialogue.tres" id="7_vau1w"]

[sub_resource type="Animation" id="Animation_b1uet"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pflqk"]
resource_name = "idle_down"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_y0uyn"]
resource_name = "idle_left"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5707964]
}

[sub_resource type="Animation" id="Animation_gv10s"]
resource_name = "idle_right"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5707964]
}

[sub_resource type="Animation" id="Animation_kujp3"]
resource_name = "idle_up"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_pjn5c"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ry0v3"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5707964]
}

[sub_resource type="Animation" id="Animation_fbroj"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5707964]
}

[sub_resource type="Animation" id="Animation_7ar1o"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.1415927]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b1uet"]
_data = {
&"RESET": SubResource("Animation_b1uet"),
&"idle_down": SubResource("Animation_pflqk"),
&"idle_left": SubResource("Animation_y0uyn"),
&"idle_right": SubResource("Animation_gv10s"),
&"idle_up": SubResource("Animation_kujp3"),
&"walk_down": SubResource("Animation_pjn5c"),
&"walk_left": SubResource("Animation_ry0v3"),
&"walk_right": SubResource("Animation_fbroj"),
&"walk_up": SubResource("Animation_7ar1o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1uet"]
size = Vector2(16, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6oia8"]
size = Vector2(696.5, 392)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pflqk"]
size = Vector2(16, 20)

[node name="Healer" type="CharacterBody2D" unique_id=276232153]
y_sort_enabled = true
collision_mask = 52
motion_mode = 1
script = ExtResource("1_6iyvr")
pm_id = &"healer04"

[node name="FieldSprite" type="Sprite2D" parent="." unique_id=139916239]
unique_name_in_owner = true
texture = ExtResource("2_qvlbb")
offset = Vector2(0, -15)
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1068094378]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_b1uet")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=1985008974]
unique_name_in_owner = true
max_polyphony = 5
bus = &"SFX"

[node name="AudioListener2D" type="AudioListener2D" parent="." unique_id=1666327862]
unique_name_in_owner = true
process_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2051516395]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_b1uet")

[node name="StateMachine" type="Node2D" parent="." unique_id=401813912]
unique_name_in_owner = true
script = ExtResource("3_ogjyn")

[node name="Idle" type="Node2D" parent="StateMachine" unique_id=666966056]
unique_name_in_owner = true
script = ExtResource("4_76gxx")

[node name="Walk" type="Node2D" parent="StateMachine" unique_id=266356510]
unique_name_in_owner = true
script = ExtResource("5_jb775")

[node name="CutScene" type="Node2D" parent="StateMachine" unique_id=307753130]

[node name="Follow" type="Node2D" parent="StateMachine" unique_id=1843222328]
unique_name_in_owner = true
script = ExtResource("6_7w712")

[node name="EnemySpawnTrigger" type="Area2D" parent="." unique_id=833406846]
unique_name_in_owner = true
visible = false
collision_layer = 524288
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySpawnTrigger" unique_id=232314133]
shape = SubResource("RectangleShape2D_6oia8")
debug_color = Color(1, 0, 0, 0)

[node name="InteractPivot" type="Marker2D" parent="." unique_id=765657580]
position = Vector2(0, -7)

[node name="InteractAreaTrigger2D" type="Area2D" parent="InteractPivot" unique_id=495559406]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractPivot/InteractAreaTrigger2D" unique_id=153777913]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_pflqk")
debug_color = Color(0.6313726, 0.5568628, 0, 0.1764706)

[node name="StateLabel" type="Label" parent="." unique_id=1759099761]
unique_name_in_owner = true
y_sort_enabled = true
offset_left = -6.0
offset_top = -43.0
offset_right = 8.0
offset_bottom = -28.0
theme_override_fonts/font = ExtResource("7_vau1w")
theme_override_font_sizes/font_size = 8
text = "I"
horizontal_alignment = 1

[node name="PoisonMarker2D" type="Marker2D" parent="." unique_id=141953638]
unique_name_in_owner = true
position = Vector2(0, -30)
